# tree-sitter-lua

./: .gitattributes  .gitignore  .prettierignore  .travis.yml  Cargo.toml  LICENSE.md  LICENSE.txt  Package.swift  README.md  appveyor.yml  binding.gyp  grammar.js  package-lock.json  package.json
.github/workflows/: ci.yml
bindings/rust/: README.md  build.rs  lib.rs
docs/: extended_bnf.md
examples/: lua5.4-grammar.lua
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/corpus/: comments.txt  expressions.txt  functions.txt  primitives.txt  shebang.txt  statements.txt
